--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,6 @@
-REACT_APP_FIREBASE_API_KEY = 
-REACT_APP_FIREBASE_AUTH_DOMAIN = 
-REACT_APP_FIREBASE_PROJECT_ID = 
-REACT_APP_FIREBASE_STORAGE_BUCKET = 
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID = 
-REACT_APP_FIREBASE_APP_ID = 
+REACT_APP_FIREBASE_API_KEY =AIzaSyDnB1r2Wuva_GNVnlCfyqSIIgXHjpU9M3A
+REACT_APP_FIREBASE_AUTH_DOMAIN =lets-chat-a43b0.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID =lets-chat-a43b0
+REACT_APP_FIREBASE_STORAGE_BUCKET =lets-chat-a43b0.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID =427785885286
+REACT_APP_FIREBASE_APP_ID =1:427785885286:web:ae33040551a6e2e419bfa7
