--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "firebase-admin": "^11.0.1",
-    "mongoose": "^6.5.3",
-    "socket.io": "^4.5.1"
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "firebase-admin": "^11.11.1",
+    "mongoose": "^6.13.8",
+    "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
